# tacobot-public

./: .gitignore  Makefile  Procfile  README.md  README.txt  amazons3.py  events.py  helper.py  main.py  pyproject.toml  requirements.txt
cogs/: basic.py  chemistry.py  local.py  maintenance.py  mathematics.py  misc.py  moderation.py  mudae.py  music.py  utils.py
cogs/classes/: exchanger.py  musicplayer.py  songs.py
src/bot/: __init__.py  __main__.py  amazons3.py  events.py  helper.py
src/bot/cogs/: basic.py  chemistry.py  maintenance.py  mathematics.py  misc.py  moderation.py  mudae.py  music.py  utils.py
src/bot/cogs/classes/: exchanger.py  musicplayer.py  songs.py
